--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Miguel Sumo's Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.miguelsumo.com" />
+    <meta property="og:image" content="/favicon.svg" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Miguel Sumo's Portfolio" />
+    <meta name="twitter:image" content="/favicon.svg" />
     <title>Miguel Sumo's Portfolio</title>
   </head>
   <body>
